# epubreader

./: .gitignore  CMakeLists.txt  README.md
res/: Mastering.epub  ico.rc  res.qrc
src/: application.h  econverter.cpp  econverter.h  edocument.cpp  edocument.h  epubView.cpp  epubView.h  faseRamBuffer.cpp  fastRamBuffer.h  fontSlider.cpp  fontSlider.h  htmlDriver.cpp  htmlDriver.h  kernelLoad.h  main.cpp  mainWindow.cpp  mainWindow.h  myDom.cpp  myDom.h  unzip.cpp  unzip.h
